String amend - Remove reference to game

--- a/app/src/main/res/external_strings/values/perks.po
+++ b/app/src/main/res/external_strings/values/perks.po
@@ -46,7 +46,7 @@ msgstr ""
 
 #. Card - Promotions - Extra Gamification Bonus.
 #:
-msgid "Receive an extra {0}% Bonus in all your purchases in {1}."
+msgid "Receive an extra {0}% Bonus in all your purchases."
 msgstr ""
 
 
