--- a/skills/src/main/res/values/strings.xml
+++ b/skills/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <string name="find_opponent">Find Opponent</string>
+  <string name="creating_ticket">Creating Ticket</string>
 </resources>
