Added user-id support.

--- a/skills/src/main/res/values/strings.xml
+++ b/skills/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
   <string name="find_room">Find a Room</string>
   <string name="finding_room">Finding a room.</string>
+  <string name="no_user_id">No User Id</string>
 </resources>
