--- a/skills/src/main/res/values/strings.xml
+++ b/skills/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
   <string name="finding_room">Finding a room.</string>
   <string name="no_user_id">No User Id</string>
   <string name="user_name">Username</string>
+  <string name="provide_wallet_creating_wallet_header">Creating wallet address&#8230;</string>
 </resources>
