--- a/skills/src/main/res/values/strings.xml
+++ b/skills/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
   <string name="provide_wallet_creating_wallet_header">Creating wallet address&#8230;</string>
   <string name="finding_room_loading_title">Finding a room</string>
   <string name="finding_room_loading_message">This may take a while…</string>
+  <string name="refunded">Your money has been refunded.</string>
+  <string name="ok">OK</string>
 </resources>
